<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/hitungFragment">

    <fragment
        android:id="@+id/hitungFragment"
        android:name="org.d3if0006.asesment1.hitung.HitungFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_hitung">
        <action
            android:id="@+id/action_hitungFragment_to_saranFragment"
            app:destination="@id/saranFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_historiFragment"
            app:destination="@id/historiFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_interestingFragment"
            app:destination="@id/interestingFragment" />
    </fragment>
    <fragment
        android:id="@+id/saranFragment"
        android:name="org.d3if0006.asesment1.ui.SaranFragment"
        tools:layout="@layout/fragment_saran"/>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if0006.asesment1.ui.AboutFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/historiFragment"
        android:name="org.d3if0006.asesment1.ui.histori.HistoriFragment"
        android:label="@string/histori"
        tools:layout="@layout/fragment_histori" />
    <fragment
        android:id="@+id/interestingFragment"
        android:name="org.d3if0006.asesment1.ui.interesting.InterestingFragment"
        android:label="@string/interesting"
        tools:layout="@layout/fragment_interesting"/>


</navigation>